--- a/src/resources/fxml/Gym2.fxml
+++ b/src/resources/fxml/Gym2.fxml
@@ -50,7 +50,7 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="111.0" prefWidth="159.0">
                      <children>
-                        <Button layoutX="-1.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="161.0" text="Kalkulator kalorii">
+                        <Button layoutX="-1.0" mnemonicParsing="false" onAction="#onMenuItemCalc" prefHeight="25.0" prefWidth="161.0" text="Kalkulator spalania kalorii">
                            <font>
                               <Font size="10.0" />
                            </font>
