--- a/src/resources/fxml/Gym2.fxml
+++ b/src/resources/fxml/Gym2.fxml
@@ -4,74 +4,101 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.GymController">
-   <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="0.0" prefWidth="558.0" />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-   </rowConstraints>
-   <children>
-      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.GymController">
+   <top>
+      <AnchorPane prefHeight="47.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
+   </top>
+   <right>
+      <AnchorPane prefHeight="313.0" prefWidth="191.0">
          <children>
-            <DatePicker layoutX="423.0" layoutY="135.0" prefHeight="25.0" prefWidth="110.0" />
-            <Button fx:id="btnReturn" layoutX="463.0" layoutY="339.0" mnemonicParsing="false" onAction="#onBtnReturn" prefHeight="25.0" prefWidth="120.0" text="Powrót" />
-            <Button layoutX="533.0" layoutY="135.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="50.0" text="Idź do" />
-            <Button layoutX="422.0" layoutY="46.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="161.0" text="Wyniki" />
-            <Button layoutX="422.0" layoutY="88.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="161.0" text="Informacje o diecie" />
-            <BorderPane layoutX="23.0" layoutY="46.0" prefHeight="278.0" prefWidth="394.0" style="-fx-border-style: solid; -fx-border-color: black;">
-               <top>
-                  <Label alignment="CENTER" prefHeight="50.0" prefWidth="402.0" style="-fx-background-color: #FF3333;" text="31/01/2018" BorderPane.alignment="CENTER">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </Label>
-               </top>
-               <center>
-                  <Accordion BorderPane.alignment="CENTER">
-                    <panes>
-                      <TitledPane animated="false" text="Informacje" />
-                      <TitledPane animated="false" prefHeight="0.0" prefWidth="402.0" text="Plan treningu" />
-                    </panes>
-                  </Accordion>
-               </center>
-            </BorderPane>
-            <Accordion layoutX="451.0" layoutY="210.0" prefHeight="75.0" prefWidth="132.0" />
-          <TitledPane animated="false" layoutX="423.0" layoutY="175.0" prefHeight="99.0" prefWidth="161.0" text="Zawartość dodatkowa">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="111.0" prefWidth="159.0">
+            <TitledPane animated="false" layoutX="15.0" layoutY="81.0" prefHeight="126.0" prefWidth="161.0" text="Zawartość dodatkowa">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="96.0" prefWidth="159.0">
                      <children>
                         <Button layoutX="-1.0" mnemonicParsing="false" onAction="#onMenuItemCalc" prefHeight="25.0" prefWidth="161.0" text="Kalkulator spalania kalorii">
                            <font>
                               <Font size="10.0" />
                            </font>
                         </Button>
-                        <Button layoutX="-1.0" layoutY="25.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="161.0" text="Przykładowe ćwiczenia">
+                        <Button layoutX="-1.0" layoutY="25.0" mnemonicParsing="false" onAction="#onMenuItemPlanT" prefHeight="25.0" prefWidth="161.0" text="Plany treningowe">
                            <font>
                               <Font size="10.0" />
                            </font>
                         </Button>
-                        <Button layoutX="-1.0" layoutY="49.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="161.0" text="Dodawanie planu treningowego">
+                        <Button layoutX="-1.0" layoutY="50.0" mnemonicParsing="false" onAction="#onMenuItemLBM" prefHeight="25.0" prefWidth="161.0" text="LBM">
+                           <font>
+                              <Font size="10.0" />
+                           </font>
+                        </Button>
+                        <Button layoutX="-1.0" layoutY="75.0" mnemonicParsing="false" onAction="#onMenuItemBMI" prefHeight="25.0" prefWidth="161.0" text="BMI">
                            <font>
                               <Font size="10.0" />
                            </font>
                         </Button>
                      </children>
                   </AnchorPane>
-            </content>
-          </TitledPane>
-            <Button layoutX="23.0" layoutY="339.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="Zapisz zmiany" />
-            <Button layoutX="143.0" layoutY="339.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="Wyczyść zmiany" />
+               </content>
+            </TitledPane>
+            <DatePicker fx:id="datePicker" layoutX="14.0" layoutY="14.0" prefHeight="25.0" prefWidth="110.0" />
+            <Button fx:id="idzDo" layoutX="124.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="50.0" text="Idź do" />
          </children>
-      </Pane>
-   </children>
-</GridPane>
+      </AnchorPane>
+   </right>
+   <left>
+      <AnchorPane prefHeight="200.0" prefWidth="32.0" BorderPane.alignment="CENTER" />
+   </left>
+   <bottom>
+      <AnchorPane prefHeight="65.0" prefWidth="522.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button layoutX="14.0" layoutY="20.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="Zapisz zmiany" AnchorPane.leftAnchor="14.0" />
+            <Button layoutX="134.0" layoutY="20.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="Edytuj" AnchorPane.leftAnchor="134.0" />
+            <Button fx:id="btnReturn" layoutX="466.0" layoutY="20.0" mnemonicParsing="false" onAction="#onBtnReturn" prefHeight="25.0" prefWidth="120.0" text="Powrót" AnchorPane.rightAnchor="14.0" />
+         </children>
+      </AnchorPane>
+   </bottom>
+   <center>
+      <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: black;" BorderPane.alignment="CENTER">
+         <top>
+            <Label fx:id="data" alignment="CENTER" prefHeight="50.0" prefWidth="3000.0" style="-fx-background-color: red;" text="data" BorderPane.alignment="CENTER">
+               <font>
+                  <Font size="25.0" />
+               </font>
+            </Label>
+         </top>
+         <center>
+            <Accordion BorderPane.alignment="CENTER">
+              <panes>
+                <TitledPane animated="false" prefWidth="386.0" text="Informacje">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="592.0" prefWidth="373.0">
+                           <children>
+                              <Label layoutX="7.0" layoutY="6.0" prefHeight="17.0" prefWidth="162.0" text="Masa ciała(kg):" />
+                              <Label layoutX="7.0" layoutY="31.0" prefHeight="17.0" prefWidth="160.0" text="Obwód klatki piersiowej(cm):" />
+                              <Label layoutX="7.0" layoutY="59.0" prefHeight="17.0" prefWidth="161.0" text="Obwód brzucha(cm):" />
+                              <Label layoutX="7.0" layoutY="110.0" prefHeight="17.0" prefWidth="100.0" text="coś tam dalej" />
+                              <Label layoutX="7.0" layoutY="84.0" prefHeight="17.0" prefWidth="160.0" text="Obwód bicepsa(cm):" />
+                              <TextField fx:id="masaCiala" layoutX="170.0" layoutY="2.0" prefHeight="25.0" prefWidth="200.0" />
+                              <TextField fx:id="obwodBrz" layoutX="170.0" layoutY="54.0" prefHeight="25.0" prefWidth="200.0" />
+                              <TextField fx:id="obwodKP" layoutX="170.0" layoutY="28.0" prefHeight="25.0" prefWidth="200.0" />
+                              <TextField fx:id="obwodBic" layoutX="170.0" layoutY="80.0" prefHeight="25.0" prefWidth="200.0" />
+                              <TextField layoutX="170.0" layoutY="106.0" prefHeight="25.0" prefWidth="200.0" />
+                           </children></AnchorPane>
+                  </content>
+                </TitledPane>
+                <TitledPane animated="false" text="Plan treningu">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  </content>
+                </TitledPane>
+              </panes>
+            </Accordion>
+         </center>
+      </BorderPane>
+   </center>
+</BorderPane>
