--- a/src/resources/fxml/Base.fxml
+++ b/src/resources/fxml/Base.fxml
@@ -12,7 +12,7 @@
 
 <BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@Base.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.MainController">
    <bottom>
-      <Label fx:id="lblVersion" text="Wersja programu: " textAlignment="CENTER" BorderPane.alignment="CENTER_RIGHT">
+      <Label fx:id="lblVersion" text="%main.version" textAlignment="CENTER" BorderPane.alignment="CENTER_RIGHT">
          <font>
             <Font name="Tahoma Bold" size="22.0" />
          </font>
@@ -27,24 +27,24 @@
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
-          <Menu mnemonicParsing="false" text="Wybierz moduł">
+          <Menu mnemonicParsing="false" text="%main.selectModule">
             <items>
-                  <MenuItem id="menuItemP1" fx:id="menuItemPlan" mnemonicParsing="false" onAction="#onMenuItemPlan" text="Mój plan lekcji" />
-                  <MenuItem id="menuItemP2" fx:id="menuItemEvents" mnemonicParsing="false" onAction="#onMenuItemEvents" text="Moje wydarzenia" />
-                  <MenuItem id="menuItemP3" fx:id="menuItemGym" mnemonicParsing="false" onAction="#onMenuItemGym" styleClass="menuItemIc" text="Moja siłownia" />
+                  <MenuItem id="menuItemP1" fx:id="menuItemPlan" mnemonicParsing="false" onAction="#onMenuItemPlan" text="%main.selectModule.lessonPlan" />
+                  <MenuItem id="menuItemP2" fx:id="menuItemEvents" mnemonicParsing="false" onAction="#onMenuItemEvents" text="%main.selectModule.eventsEditor" />
+                  <MenuItem id="menuItemP3" fx:id="menuItemGym" mnemonicParsing="false" onAction="#onMenuItemGym" styleClass="menuItemIc" text="%main.selectModule.gym" />
                   <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem id="menuItemExit" fx:id="menuItemExit" mnemonicParsing="false" onAction="#onMenuItemExit" text="Wyjdź z programu" />
+                  <MenuItem id="menuItemExit" fx:id="menuItemExit" mnemonicParsing="false" onAction="#onMenuItemExit" text="%main.selectModule.exit" />
             </items>
           </Menu>
-            <Menu mnemonicParsing="false" text="Ustawienia">
+            <Menu mnemonicParsing="false" text="%main.settings">
               <items>
-                <MenuItem id="menuItemSettingsBase" mnemonicParsing="false" onAction="#onMenuItemSettings" text="Ustawienia ogólne" />
+                <MenuItem id="menuItemSettingsBase" mnemonicParsing="false" onAction="#onMenuItemSettings" text="%main.settings.base" />
               </items>
             </Menu>
-          <Menu mnemonicParsing="false" text="Pomoc">
+          <Menu mnemonicParsing="false" text="%main.help">
             <items>
-                  <MenuItem id="menuItemCheckUpdates" mnemonicParsing="false" onAction="#onMenuItemUpdate" text="Sprawdź aktualizacje" />
-              <MenuItem id="menuItemAbout" fx:id="menuItemAbout" mnemonicParsing="false" onAction="#onMenuItemAbout" text="O programie" />
+                  <MenuItem id="menuItemCheckUpdates" mnemonicParsing="false" onAction="#onMenuItemUpdate" text="%main.help.updates" />
+              <MenuItem id="menuItemAbout" fx:id="menuItemAbout" mnemonicParsing="false" onAction="#onMenuItemAbout" text="%main.help.about" />
             </items>
           </Menu>
         </menus>
@@ -53,7 +53,7 @@
    <center>
       <FlowPane alignment="CENTER" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="My Organizer">
+            <Label text="MyOrganizer">
                <font>
                   <Font name="Tahoma Bold" size="42.0" />
                </font>
