--- a/src/resources/fxml/Gym.fxml
+++ b/src/resources/fxml/Gym.fxml
@@ -4,10 +4,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.GymController">
@@ -56,8 +60,8 @@
    <bottom>
       <AnchorPane prefHeight="65.0" prefWidth="522.0" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="14.0" layoutY="20.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="Zapisz zmiany" AnchorPane.leftAnchor="14.0" />
-            <Button layoutX="134.0" layoutY="20.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="Edytuj" AnchorPane.leftAnchor="134.0" />
+            <Button layoutX="14.0" layoutY="20.0" mnemonicParsing="false" onAction="#zapisz" prefHeight="25.0" prefWidth="120.0" text="Zapisz zmiany" AnchorPane.leftAnchor="14.0" />
+            <Button layoutX="134.0" layoutY="20.0" mnemonicParsing="false" onAction="#edytuj" prefHeight="25.0" prefWidth="120.0" text="Edytuj" AnchorPane.leftAnchor="134.0" />
             <Button fx:id="btnReturn" layoutX="466.0" layoutY="20.0" mnemonicParsing="false" onAction="#onBtnReturn" prefHeight="25.0" prefWidth="120.0" text="Powrót" AnchorPane.rightAnchor="14.0" />
          </children>
       </AnchorPane>
@@ -74,7 +78,7 @@
          <center>
             <Accordion BorderPane.alignment="CENTER">
               <panes>
-                <TitledPane animated="false" prefWidth="386.0" text="Informacje">
+                <TitledPane fx:id="informacje" animated="false" prefWidth="386.0" text="Informacje">
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="592.0" prefWidth="373.0">
                            <children>
@@ -91,10 +95,21 @@
                            </children></AnchorPane>
                   </content>
                 </TitledPane>
-                <TitledPane animated="false" text="Plan treningu">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                  </content>
+                <TitledPane fx:id="planT" animated="false" text="Plan treningu">
+                     <content>
+                        <ScrollPane prefHeight="200.0" prefWidth="200.0">
+                           <content>
+                              <GridPane fx:id="grid" prefHeight="181.0" prefWidth="362.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                              </GridPane>
+                           </content>
+                        </ScrollPane>
+                     </content>
                 </TitledPane>
               </panes>
             </Accordion>
