--- a/src/resources/fxml/addPlanT.fxml
+++ b/src/resources/fxml/addPlanT.fxml
@@ -2,11 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.addPlanTController">
@@ -14,8 +16,8 @@
       <AnchorPane prefHeight="60.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="btnReturn" layoutX="466.0" layoutY="26.0" mnemonicParsing="false" onAction="#onBtnReturn" prefHeight="25.0" prefWidth="120.0" text="Powrót" AnchorPane.rightAnchor="14.0" />
-            <Button layoutX="314.0" layoutY="26.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" text="Zapisz" AnchorPane.leftAnchor="314.0" />
-            <TextField layoutX="14.0" layoutY="26.0" minHeight="-Infinity" prefHeight="25.0" prefWidth="300.0" AnchorPane.leftAnchor="14.0" />
+            <Button layoutX="314.0" layoutY="26.0" mnemonicParsing="false" onAction="#zapisz" prefHeight="25.0" prefWidth="120.0" text="Zapisz" AnchorPane.leftAnchor="314.0" />
+            <TextField fx:id="nazwa" layoutX="14.0" layoutY="26.0" minHeight="-Infinity" prefHeight="25.0" prefWidth="300.0" AnchorPane.leftAnchor="14.0" />
             <Label layoutX="14.0" layoutY="4.0" prefHeight="17.0" prefWidth="301.0" text="Nazwa planu:" AnchorPane.leftAnchor="14.0">
                <font>
                   <Font size="14.0" />
@@ -32,19 +34,47 @@
       </Label>
    </top>
    <center>
-      <AnchorPane prefHeight="288.0" prefWidth="510.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="288.0" prefWidth="529.0" BorderPane.alignment="CENTER">
          <children>
-            <TableView prefHeight="218.0" prefWidth="512.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-              <columns>
-                <TableColumn prefWidth="260.0" text="Ćwiczenie" />
-                <TableColumn minWidth="4.0" prefWidth="150.0" text="Ilość powtórzeń" />
-                  <TableColumn prefWidth="100.0" text="Czas(min)" />
-              </columns>
-            </TableView>
-            <TextField layoutX="260.0" layoutY="221.0" minHeight="-Infinity" prefHeight="25.0" prefWidth="153.0" AnchorPane.bottomAnchor="42.0" AnchorPane.leftAnchor="260.0" />
-            <TextField layoutX="412.0" layoutY="221.0" minHeight="-Infinity" prefHeight="25.0" prefWidth="100.0" AnchorPane.bottomAnchor="42.0" AnchorPane.leftAnchor="412.0" />
-            <TextField layoutY="221.0" minHeight="-Infinity" prefHeight="25.0" prefWidth="260.0" AnchorPane.bottomAnchor="42.0" AnchorPane.leftAnchor="0.0" />
-            <Button layoutX="412.0" layoutY="246.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Dodaj" AnchorPane.bottomAnchor="17.0" AnchorPane.leftAnchor="412.0" />
+            <TextField fx:id="powt" layoutX="251.0" layoutY="221.0" minHeight="-Infinity" prefHeight="25.0" prefWidth="137.0" AnchorPane.bottomAnchor="42.0" AnchorPane.leftAnchor="251.0" />
+            <TextField fx:id="czas" layoutX="388.0" layoutY="221.0" minHeight="-Infinity" prefHeight="25.0" prefWidth="118.0" AnchorPane.bottomAnchor="42.0" AnchorPane.leftAnchor="388.0" />
+            <TextField fx:id="cwicz" layoutX="1.0" layoutY="221.0" minHeight="-Infinity" prefHeight="25.0" prefWidth="250.0" AnchorPane.bottomAnchor="42.0" AnchorPane.leftAnchor="1.0" />
+            <Button layoutX="388.0" layoutY="246.0" mnemonicParsing="false" onAction="#dodaj" prefHeight="25.0" prefWidth="118.0" text="Dodaj" AnchorPane.bottomAnchor="17.0" AnchorPane.leftAnchor="388.0" />
+            <ScrollPane layoutX="1.0" layoutY="4.0" prefHeight="213.0" prefWidth="519.0" AnchorPane.topAnchor="4.0">
+               <content>
+                  <BorderPane prefHeight="200.0" prefWidth="503.0">
+                     <top>
+                        <GridPane prefHeight="40.0" prefWidth="503.0" BorderPane.alignment="CENTER">
+                           <rowConstraints>
+                              <RowConstraints maxHeight="54.0" minHeight="10.0" prefHeight="29.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <columnConstraints>
+                              <ColumnConstraints maxWidth="375.0" minWidth="10.0" prefWidth="253.0" />
+                              <ColumnConstraints maxWidth="375.0" minWidth="10.0" prefWidth="139.0" />
+                              <ColumnConstraints maxWidth="474.0" minWidth="108.0" prefWidth="119.0" />
+                           </columnConstraints>
+                           <children>
+                              <Label alignment="CENTER" prefHeight="30.0" prefWidth="117.0" style="-fx-background-color: #FF3333; -fx-border-color: black;" text="Czas(min)" GridPane.columnIndex="2" />
+                              <Label alignment="CENTER" prefHeight="30.0" prefWidth="3000.0" style="-fx-background-color: #FF3333; -fx-border-color: black;" text="Ilość powtórzeń" GridPane.columnIndex="1" />
+                              <Label alignment="CENTER" prefHeight="30.0" prefWidth="3000.0" style="-fx-background-color: #FF3333; -fx-border-color: black;" text="Ćwiczenie" />
+                           </children>
+                        </GridPane>
+                     </top>
+                     <center>
+                        <GridPane fx:id="grid" prefHeight="1200.0" prefWidth="503.0" style="-fx-grid-lines-visible: true;" BorderPane.alignment="CENTER">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="269.0" minWidth="10.0" prefWidth="249.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="280.0" minWidth="10.0" prefWidth="135.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="162.0" minWidth="10.0" prefWidth="118.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                        </GridPane>
+                     </center>
+                  </BorderPane>
+               </content>
+            </ScrollPane>
          </children>
       </AnchorPane>
    </center>
