--- a/src/resources/fxml/Events.fxml
+++ b/src/resources/fxml/Events.fxml
@@ -1,74 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TreeView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom, rgba(96,108,136,1) 0%,rgba(63,76,107,1) 100%);" xmlns="http://javafx.com/javafx/8.0.152" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.EventsController">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <children>
-      <TreeView fx:id="trEvents" prefHeight="200.0" prefWidth="200.0" />
-      <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="1">
+<SplitPane dividerPositions="0.29797979797979796" style="-fx-background-color: linear-gradient(to bottom, rgba(96,108,136,1) 0%,rgba(63,76,107,1) 100%);;" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.152" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.EventsController">
+  <items>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
          <children>
-            <GridPane prefHeight="230.0" prefWidth="290.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="107.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="183.0" minWidth="10.0" prefWidth="183.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="79.0" minHeight="10.0" prefHeight="51.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="144.0" minHeight="9.0" prefHeight="43.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="191.0" minHeight="8.0" prefHeight="43.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="191.0" minHeight="8.0" prefHeight="87.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <TreeView fx:id="trEvents" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+         </children></AnchorPane>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+         <children>
+            <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <Label text="Nazwa Wydarzenia" />
-                  <TextField fx:id="txtEventName" promptText="Długość tekstu 1-64" GridPane.columnIndex="1" />
-                  <Label text="Opis" GridPane.rowIndex="1" />
-                  <TextField fx:id="txtEventDescription" promptText="Długość tekstu 1-64" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Label text="Data" GridPane.rowIndex="2" />
-                  <Label text="Inne" GridPane.rowIndex="3" />
-                  <HBox prefHeight="29.0" prefWidth="188.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <HBox prefHeight="30.0" prefWidth="417.0" spacing="5.0">
                      <children>
-                        <Label text="Czas" />
-                        <TextField fx:id="txtEventTime" prefHeight="25.0" prefWidth="45.0" promptText="00:00" />
-                        <DatePicker fx:id="txtEventDate" prefHeight="25.0" prefWidth="100.0" promptText="Wypełnij" />
+                        <Label prefHeight="17.0" prefWidth="108.0" text="%events.eventName" />
+                        <TextField fx:id="txtEventName" promptText="%events.hint" />
+                        <CheckBox fx:id="chbEventDisabled" mnemonicParsing="false" text="%events.disableEvent" />
                      </children>
                   </HBox>
-                  <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                  <HBox prefHeight="30.0" prefWidth="417.0" spacing="5.0">
                      <children>
-                        <CheckBox fx:id="chbEventDisabled" mnemonicParsing="false" text="Wyłącz wydarzenie" />
-                        <CheckBox fx:id="chbShowMessage" mnemonicParsing="false" text="Wyświetl komunikat" />
-                        <TextArea fx:id="txtMessageToShow" prefHeight="200.0" prefWidth="200.0" />
+                        <Label prefHeight="17.0" prefWidth="108.0" text="%events.comment" />
+                        <TextField fx:id="txtEventDescription" promptText="%events.hint">
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </TextField>
                      </children>
+                  </HBox>
+                  <HBox prefHeight="30.0" prefWidth="417.0" spacing="5.0">
+                     <children>
+                        <Label prefHeight="17.0" prefWidth="107.0" text="%events.callWhen" />
+                        <TextField fx:id="txtEventTime" prefHeight="25.0" prefWidth="57.0" promptText="00:00">
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </TextField>
+                        <DatePicker fx:id="txtEventDate" prefHeight="25.0" prefWidth="136.0" promptText="%events.enterDate" />
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="32.0" prefWidth="407.0" spacing="5.0">
+                     <children>
+                        <Label prefHeight="17.0" prefWidth="107.0" text="%events.taskType" />
+                        <ChoiceBox fx:id="chboxTaskType" prefWidth="150.0">              
+                        </ChoiceBox>
+                     </children>
+                  </HBox>
+                  <HBox fx:id="controlMessage" prefHeight="51.0" prefWidth="407.0" spacing="5.0">
+                     <children>
+                        <Label prefHeight="17.0" prefWidth="107.0" text="%events.message" />
+                        <TextArea fx:id="txtMessageToShow" prefHeight="200.0" prefWidth="200.0">
+                           <effect>
+                              <Glow />
+                           </effect>
+                        </TextArea>
+                     </children>
+                  </HBox>
+                  <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
+                     <children>
+                        <Button fx:id="btnNewEvent" mnemonicParsing="false" onAction="#onBtnNewEvent" prefHeight="25.0" prefWidth="118.0" text="%events.newEvent" />
+                        <Button fx:id="btnEditEvent" mnemonicParsing="false" onAction="#onBtnEditEvent" prefHeight="25.0" prefWidth="118.0" text="%events.editEvent" />
+                        <Button fx:id="btnRemoveEvent" mnemonicParsing="false" onAction="#onBtnRemoveEvent" prefWidth="118.0" text="%events.removeEvent" />
+                        <Button fx:id="btnSaveAll" mnemonicParsing="false" onAction="#onBtnSaveAll" prefWidth="118.0" text="%events.save" />
+                        <Button fx:id="btnReturn" mnemonicParsing="false" onAction="#onBtnReturn" prefWidth="118.0" text="%events.return" />
+                     </children>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
                   </VBox>
                </children>
-            </GridPane>
-            <Button fx:id="btnNewEvent" mnemonicParsing="false" onAction="#onBtnNewEvent" prefHeight="25.0" prefWidth="133.0" text="Nowe wydarzenie" />
-            <Button fx:id="btnEditEvent" mnemonicParsing="false" onAction="#onBtnEditEvent" prefHeight="25.0" prefWidth="133.0" text="Edytuj wydarzenie" />
-            <Button fx:id="btnRemoveEvent" mnemonicParsing="false" onAction="#onBtnRemoveEvent" prefHeight="25.0" prefWidth="133.0" text="Usuń wydarzenie" />
-            <Button fx:id="btnSaveAll" mnemonicParsing="false" onAction="#onBtnSaveAll" prefHeight="25.0" prefWidth="133.0" text="Zapisz wszystko" />
-            <Button fx:id="btnReturn" mnemonicParsing="false" onAction="#onBtnReturn" prefHeight="25.0" prefWidth="133.0" text="Powrót" />
-         </children>
-         <GridPane.margin>
-            <Insets left="10.0" top="10.0" />
-         </GridPane.margin>
-      </VBox>
-   </children>
-</GridPane>
+               <padding>
+                  <Insets left="10.0" top="10.0" />
+               </padding>
+            </VBox>
+         </children></AnchorPane>
+  </items>
+</SplitPane>
